# gapura

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md  TASK.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
contracts/: .env.example  README.md  foundry.toml
contracts/script/: Gapura.s.sol
contracts/src/: Gapura.sol
contracts/test/: Gapura.t.sol
docs/: e2e-checklist.md  install.md  perf-notes.md  runbook.md  sentinel.md  sshd.md
scripts/: dev-smoke.sh  install.sh
sentinel/: Cargo.toml
sentinel/src/: main.rs
