[package]
name = "gapura"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.8.3", features = ["provider-http", "contract", "rpc-types"] }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }
toml = "1.1.2"
