[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gapura-sentinel"
path = "src/main.rs"

[dependencies]
alloy = { version = "1.8.3", features = ["provider-http", "sol-types", "contract"] }
anyhow = "1.0.102"
moka = { version = "0.12.15", features = ["future"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
toml = "1.1.2"
